tests/functional/data/transpiler/common/errors/dim/dim_applied_to_wrong_node_1.err
dim_applied_to_wrong_node_1.cpp:4:13: error: 'dim' attribute only applies to type, struct/union/class field or variable declarations
    4 |             @dim for (int k = 0; k < 10; ++k) {
      |             ^
